# aethernet

./: .gitignore  LICENSE  NOTICE  README.md  README.ru.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/aethernet/: __init__.py  exceptions.py  server.py  server_router.py  typing.py
src/aethernet/transport/: __init__.py  _utils.py  enums.py  high_transport.py  low_transport.py  medium_transport.py  server_router.py  stack.py
src/aethernet/transport/http_over_link/: __init__.py  http_over_link.py
src/aethernet/transport/ws_over_link/: __init__.py  ws_over_link.py  ws_over_link_server.py
tests/: conftest.py  helpers.py  test_client_chatopenai.py  test_helpers.py  test_high_transport.py  test_http_and_ws.py  test_medium_transport.py  test_server_router.py
tests/http/: test_link_http.py
tests/websockets/: test_link_websocket_client.py  test_link_websocket_proxy_server.py
