[project]
name = "aethernet"
version = "0.1.0"
description = "Part of Slet Infrastructure"
authors = [
    { name = "Walter Kerrigan", email = "esolment@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "basex-python==0.1.0",
    "msgpack>=1.1.2",
    "pycryptodome>=3.23.0,<4",
    "vk-api==11.10.0",
    "msgpack>=1.1.2,<2"
]

[project.optional-dependencies]
server = [
    "httpx>=0.28.1,<0.29",
    "websockets>=16.0,<16.1"
]

dev = [
    "langchain-openai",
    "loguru",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
